--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     },
     "author": "Lambda School",
     "devDependencies": {
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.4"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "knex": "^0.21.6",
+        "pg": "^8.3.3",
+        "sqlite3": "^5.0.0"
     }
 }
