--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
     "description": "Node DB 2 Module Challenge",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon server.js",
+        "start": "node server.js "
     },
     "author": "Lambda School",
     "devDependencies": {
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.6"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "json": "^10.0.0",
+        "knex": "^0.21.12",
+        "sqlite3": "^5.0.0"
     }
 }
