--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/OzLievano/node-db2-project#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.21.17",
     "sqlite3": "^5.0.0"
   }
 }
