--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "sqlite3": "^5.0.0"
     }
 }
