--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "Node DB 2 Module Challenge",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon index.js",
+        "mup": "knex migrate:up",
+        "mdown": "knex migrate:down", 
+        "seed": "knex seed:run"
     },
     "author": "Lambda School",
     "devDependencies": {
