--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "knex": "^0.21.17",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
