--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
+    "up": "npx knex migrate:up",
+    "down": "npx knex migrate:down"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
