--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "vin-validator": "^1.0.0"
   },
   "dependencies": {
     "express": "^4.17.1",
