--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.6",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin": "^0.1.0",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
