--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
     "migrate": "knex migrate: latest",
+    "rollback": "knex migrate: rollback",
+    "mgup": "knex migrate: up",
+    "mgdown": "knex migrate: down",
     "seed": "knex seed: run"
   },
   "devDependencies": {
