--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
     "env": {
+        "node": true,
         "commonjs": true,
         "es2021": true,
-        "node": true,
         "jest": true
     },
     "extends": "eslint:recommended",
@@ -10,5 +10,6 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "semi": 0
     }
 }
