--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
     "up": "knex migrate:up",
-    "down": "knex migrate:down"
+    "down": "knex migrate:down",
+    "seed": "knex seed:run"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
@@ -19,7 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.11",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
