--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,25 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es2021": true,
+        "es2021": true, 
         "node": true,
         "jest": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 13
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
+        "semi": 0
     }
 }
