--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed run"
+
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.4.1",
+    "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.4",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
@@ -17,7 +21,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.14",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
