--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "@vscode/sqlite3": "^5.0.7",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
-    "knex": "^0.95.14",
-    "sqlite3": "^5.0.2",
+    "knex": "^1.0.1",
     "vin-validator": "^1.0.0"
   },
   "repository": {
