--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.4.1",
-    "jest": "^27.4.4",
+    "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "supertest": "^6.1.6"
+    "supertest": "^6.2.2"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "knex": "^0.95.14",
-    "sqlite3": "^5.0.2"
+    "@vscode/sqlite3": "5.0.7",
+    "express": "^4.17.3",
+    "knex": "^1.0.3"
   },
   "repository": {
     "type": "git",
